// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text renders correctly with dir 1`] = `
<DocumentFragment>
  .cache-1abh8n3-StyledText {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

<div
    style="margin-bottom: 16px; margin-top: 8px; width: 500px;"
  >
    <div
      class="cache-1abh8n3-StyledText e13y3mga0"
      dir="rtl"
    >
      This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
    </div>
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with htmlFor 1`] = `
<DocumentFragment>
  .cache-1e8qouo-StyledText {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    style="margin-bottom: 16px; margin-top: 8px; width: 500px;"
  >
    <div
      class="cache-1e8qouo-StyledText e13y3mga0"
      for="test"
    >
      This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
    </div>
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with placement 1`] = `
<DocumentFragment>
  .cache-k7mcew-StyledText {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: end;
}

<div
    style="margin-bottom: 16px; margin-top: 8px; width: 500px;"
  >
    <div
      class="cache-k7mcew-StyledText e13y3mga0"
    >
      This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
    </div>
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with tooltip 1`] = `
<DocumentFragment>
  .cache-1abh8n3-StyledText {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

<div
    style="margin-bottom: 16px; margin-top: 8px; width: 500px;"
  >
    <div
      class="cache-1abh8n3-StyledText e13y3mga0"
    >
      This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
    </div>
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="body" 1`] = `
<DocumentFragment>
  .cache-1e8qouo-StyledText {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-1e8qouo-StyledText e13y3mga0"
  >
    body
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="bodySmall" 1`] = `
<DocumentFragment>
  .cache-3l2mjz-StyledText {
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-3l2mjz-StyledText e13y3mga0"
  >
    bodySmall
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="bodySmallStrong" 1`] = `
<DocumentFragment>
  .cache-10an7cj-StyledText {
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-10an7cj-StyledText e13y3mga0"
  >
    bodySmallStrong
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="bodySmallStronger" 1`] = `
<DocumentFragment>
  .cache-1oov0zf-StyledText {
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 600;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-1oov0zf-StyledText e13y3mga0"
  >
    bodySmallStronger
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="bodyStrong" 1`] = `
<DocumentFragment>
  .cache-zvclys-StyledText {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-zvclys-StyledText e13y3mga0"
  >
    bodyStrong
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="bodyStronger" 1`] = `
<DocumentFragment>
  .cache-vynu3m-StyledText {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 600;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-vynu3m-StyledText e13y3mga0"
  >
    bodyStronger
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="caption" 1`] = `
<DocumentFragment>
  .cache-vt2o5d-StyledText {
  font-size: 12px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-vt2o5d-StyledText e13y3mga0"
  >
    caption
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="captionSmall" 1`] = `
<DocumentFragment>
  .cache-1pm8aga-StyledText {
  font-size: 10px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-1pm8aga-StyledText e13y3mga0"
  >
    captionSmall
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="captionSmallStrong" 1`] = `
<DocumentFragment>
  .cache-1wbhr4s-StyledText {
  font-size: 10px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-1wbhr4s-StyledText e13y3mga0"
  >
    captionSmallStrong
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="captionSmallStronger" 1`] = `
<DocumentFragment>
  .cache-1484uab-StyledText {
  font-size: 10px;
  font-family: Inter,Asap;
  font-weight: 600;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-1484uab-StyledText e13y3mga0"
  >
    captionSmallStronger
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="captionStrong" 1`] = `
<DocumentFragment>
  .cache-6ypnd3-StyledText {
  font-size: 12px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-6ypnd3-StyledText e13y3mga0"
  >
    captionStrong
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="captionStronger" 1`] = `
<DocumentFragment>
  .cache-12ljaez-StyledText {
  font-size: 12px;
  font-family: Inter,Asap;
  font-weight: 600;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-12ljaez-StyledText e13y3mga0"
  >
    captionStronger
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="code" 1`] = `
<DocumentFragment>
  .cache-imijze-StyledText {
  font-size: 14px;
  font-family: JetBrains;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-imijze-StyledText e13y3mga0"
  >
    code
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="codeStrong" 1`] = `
<DocumentFragment>
  .cache-129x77d-StyledText {
  font-size: 14px;
  font-family: JetBrains;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-129x77d-StyledText e13y3mga0"
  >
    codeStrong
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="codeStronger" 1`] = `
<DocumentFragment>
  .cache-1pdfd0r-StyledText {
  font-size: 14px;
  font-family: JetBrains;
  font-weight: 600;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-1pdfd0r-StyledText e13y3mga0"
  >
    codeStronger
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="heading" 1`] = `
<DocumentFragment>
  .cache-3j6na9-StyledText {
  font-size: 25px;
  font-family: Space Grotesk,Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 32px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-3j6na9-StyledText e13y3mga0"
  >
    heading
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="headingLarge" 1`] = `
<DocumentFragment>
  .cache-10h0ge-StyledText {
  font-size: 35px;
  font-family: Space Grotesk,Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 48px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-10h0ge-StyledText e13y3mga0"
  >
    headingLarge
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="headingLargeStrong" 1`] = `
<DocumentFragment>
  .cache-9i6wh-StyledText {
  font-size: 35px;
  font-family: Space Grotesk;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 48px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-9i6wh-StyledText e13y3mga0"
  >
    headingLargeStrong
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="headingLargeStronger" 1`] = `
<DocumentFragment>
  .cache-2eey3i-StyledText {
  font-size: 35px;
  font-family: Space Grotesk;
  font-weight: 600;
  letter-spacing: 0;
  line-height: 48px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-2eey3i-StyledText e13y3mga0"
  >
    headingLargeStronger
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="headingSmall" 1`] = `
<DocumentFragment>
  .cache-1yjl96t-StyledText {
  font-size: 21px;
  font-family: Space Grotesk,Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 32px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-1yjl96t-StyledText e13y3mga0"
  >
    headingSmall
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="headingSmallStrong" 1`] = `
<DocumentFragment>
  .cache-1xftb8s-StyledText {
  font-size: 21px;
  font-family: Space Grotesk;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 32px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-1xftb8s-StyledText e13y3mga0"
  >
    headingSmallStrong
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="headingSmallStronger" 1`] = `
<DocumentFragment>
  .cache-tx5qw-StyledText {
  font-size: 21px;
  font-family: Space Grotesk;
  font-weight: 600;
  letter-spacing: 0;
  line-height: 32px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-tx5qw-StyledText e13y3mga0"
  >
    headingSmallStronger
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="headingStrong" 1`] = `
<DocumentFragment>
  .cache-4u3rrv-StyledText {
  font-size: 25px;
  font-family: Space Grotesk;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 32px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-4u3rrv-StyledText e13y3mga0"
  >
    headingStrong
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="headingStronger" 1`] = `
<DocumentFragment>
  .cache-15l8cgl-StyledText {
  font-size: 25px;
  font-family: Space Grotesk;
  font-weight: 600;
  letter-spacing: 0;
  line-height: 32px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-15l8cgl-StyledText e13y3mga0"
  >
    headingStronger
  </div>
</DocumentFragment>
`;

exports[`Text with disabled 1`] = `
<DocumentFragment>
  .cache-1e8qouo-StyledText {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-1e8qouo-StyledText e13y3mga0"
  >
    Lorem Ipsum
  </div>
</DocumentFragment>
`;

exports[`Text with italic 1`] = `
<DocumentFragment>
  .cache-1373h6k-StyledText {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-style: italic;
}

<div
    class="cache-1373h6k-StyledText e13y3mga0"
  >
    Lorem Ipsum
  </div>
</DocumentFragment>
`;

exports[`Text with multiple nested chidldren renders correctly 1`] = `
<DocumentFragment>
  .cache-1e8qouo-StyledText {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-3j6na9-StyledText {
  font-size: 25px;
  font-family: Space Grotesk,Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 32px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-1e8qouo-StyledText e13y3mga0"
  >
    Lorem
    <span>
      Ipsum
    </span>
    <span
      class="cache-3j6na9-StyledText e13y3mga0"
    >
      <span>
        Dolor
      </span>
    </span>
    Sit
  </div>
</DocumentFragment>
`;

exports[`Text with prominence stronger on non neutral 1`] = `
<DocumentFragment>
  .cache-1g8n0eg-StyledText {
  color: #b3144d;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-1g8n0eg-StyledText e13y3mga0"
  >
    Lorem Ipsum
  </div>
</DocumentFragment>
`;

exports[`Text with underline 1`] = `
<DocumentFragment>
  .cache-ez8ebe-StyledText {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div
    class="cache-ez8ebe-StyledText e13y3mga0"
  >
    Lorem Ipsum
  </div>
</DocumentFragment>
`;
